tests/ui/pattern/usefulness/guards.stderr
error[E0004]: non-exhaustive patterns: `128_u8..=u8::MAX` not covered
  --> $DIR/guards.rs:11:11
   |
LL |     match 0u8 {
   |           ^^^ pattern `128_u8..=u8::MAX` not covered
   |
   = note: the matched value is of type `u8`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         128 ..= 255 if true => {},
LL +         128_u8..=u8::MAX => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
